RESOLVED FIXED55155
USE_PARAM not declared
https://bugs.webkit.org/show_bug.cgi?id=55155
Summary USE_PARAM not declared
Oleg Romashin (:romaxa)
Reported 2011-02-24 09:16:14 PST
Attempt to compile latest trunk fail with: ../../../WebKit/Source/WebCore/bindings/js/JSInjectedScriptHostCustom.cpp: In member function 'JSC::JSValue WebCore::JSInjectedScriptHost::currentCallFrame(JSC::ExecState*)': ../../../WebKit/Source/WebCore/bindings/js/JSInjectedScriptHostCustom.cpp:133: error: 'USE_PARAM' was not declared in this scope ../../../WebKit/Source/WebCore/bindings/js/JSInjectedScriptHostCustom.cpp:134: error: expected ';' before 'return' Sounds like it coming from bug 55057
Attachments
Patch (2.07 KB, patch)
2011-02-24 09:27 PST, Pavel Feldman
yurys: review+
Oleg Romashin (:romaxa)
Comment 2 2011-02-24 09:21:38 PST
This is Qt port build
Pavel Feldman
Comment 3 2011-02-24 09:27:45 PST
Pavel Feldman
Comment 4 2011-02-24 09:30:12 PST
Note You need to log in before you can comment on or make changes to this bug.