third_party/WebKit/Source/WebCore/bindings/js/JSInjectedScriptHostCustom.cpp
@@ -131,7 +131,7 @@ JSValue JSInjectedScriptHost::currentCallFrame(ExecState* exec)
     JSLock lock(SilenceAssertionsOnly);
     return toJS(exec, callFrame);
 #else
-    USE_PARAM(exec)
+    UNUSED_PARAM(exec);
     return jsUndefined();
 #endif
 }
